--- a/examples/dialog-modal/datepicker-dialog.html
+++ b/examples/dialog-modal/datepicker-dialog.html
@@ -119,11 +119,11 @@
 
             <tbody>
               <tr>
-                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>25</button></td>
-                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>26</button></td>
-                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>27</button></td>
-                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>28</button></td>
-                <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>29</button></td>
+                <td class="dateCell"><button class="dateButton disabled" tabindex="-1"></button></td>
+                <td class="dateCell"><button class="dateButton disabled" tabindex="-1">26</button></td>
+                <td class="dateCell"><button class="dateButton disabled" tabindex="-1">27</button></td>
+                <td class="dateCell"><button class="dateButton disabled" tabindex="-1">28</button></td>
+                <td class="dateCell"><button class="dateButton disabled" tabindex="-1">29</button></td>
                 <td class="dateCell"><button class="dateButton" tabindex="-1" disabled>30</button></td>
                 <td class="dateCell"><button class="dateButton" tabindex="-1">1</button></td>
               </tr>
