updated some of the tests

--- a/examples/combobox/aria1.1pattern/combo-11-datepicker.html
+++ b/examples/combobox/aria1.1pattern/combo-11-datepicker.html
@@ -500,7 +500,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr data-test-id="combobox-role">
+          <tr data-test-id="textbox-role">
             <th scope="row"><code>role=<q>combobox</q></code></th>
             <td></td>
             <td><code>input</code></td>
@@ -508,7 +508,7 @@
               Identifes the <code>input</code> element as a combobox.
             </td>
           </tr>
-          <tr data-test-id="combobox-aria-haspopup">
+          <tr data-test-id="textbox-aria-haspopup">
             <td></td>
             <th scope="row"><code>aria-haspopup=<q>dialog</q></code></th>
             <td><code>input</code></td>
@@ -516,7 +516,7 @@
               Identifies the combobox opens a dialog box.
             </td>
           </tr>
-          <tr data-test-id="combobox-aria-expanded">
+          <tr data-test-id="textbox-aria-expanded">
             <td></td>
             <th scope="row"><code>aria-expanded=<q>false</q></code></th>
             <td><code>input</code></td>
