updated tests and fixe a tabindex bug

--- a/examples/combobox/aria1.1pattern/combo-11-datepicker.html
+++ b/examples/combobox/aria1.1pattern/combo-11-datepicker.html
@@ -162,7 +162,7 @@
                 <td class="dateCell"><button class="dateButton" tabindex="-1">11</button></td>
                 <td class="dateCell"><button class="dateButton" tabindex="-1">12</button></td>
                 <td class="dateCell"><button class="dateButton" tabindex="-1">13</button></td>
-                <td class="dateCell"><button class="dateButton" tabindex="0">14</button></td>
+                <td class="dateCell"><button class="dateButton" tabindex="0" aria-selected="true">14</button></td>
                 <td class="dateCell"><button class="dateButton" tabindex="-1">15</button></td>
               </tr>
               <tr>
