--- a/aria-practices.html
+++ b/aria-practices.html
@@ -20,35 +20,9 @@
   </section>
 
   <section id="sotd">
-    <p>
-      This is an editor's draft by the
-      <a href="https://www.w3.org/WAI/ARIA/">Accessible Rich Internet Applications Working Group</a>
-      of the
-      <a href="https://www.w3.org/WAI/">Web Accessibility Initiative</a>.
-      It supports the
-      <a href="" class="specref">WAI-ARIA 1.1</a> [[WAI-ARIA]]
-      specification, providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification.
-    </p>
-    <p> This draft includes only a portion of content planned for WAI-ARIA Authoring Practices 1.1. To see plans for the complete guide, review the <a href="https://github.com/w3c/aria-practices/milestones?direction=asc&amp;sort=due_date&amp;state=open">Authoring Practices Milestone Plan</a>. </p>
-    <p>
-      Feedback on the  information provided here is essential to the ultimate success of Rich Internet Applications that afford full access to their information and operations.
-      The Accessible Rich Internet Applications Working Group asks in particular:
-    </p>
-    <ul>
-      <li>Is it clear how to create accessible Rich Internet Applications?</li>
-      <li>Is the usage of roles, states, and properties clear? </li>
-      <li>Are the various types of rich Web content covered? </li>
-      <li>Are considerations beyond the use of WAI-ARIA sufficiently explained? </li>
-      <li>Is the relationship of this document to the WAI-ARIA specification clear? </li>
-      <li>Are the <a href="#aria_ex">design patterns</a> clear?</li>
-    </ul>
-    <p>
-      To comment,
-      <a href="https://github.com/w3c/aria-practices/issues/">file an issue in the <abbr title="World Wide Web Consortium">W3C</abbr> ARIA Practices GitHub repository</a>,
-      or if that is not possible, send email to
-      <a href="mailto:public-aria@w3.org?subject=Comment%20on%20WAI-ARIA%20Practices%201.1">public-aria@w3.org</a>
-      (<a href="http://lists.w3.org/Archives/Public/public-aria/">comment archive</a>).
-    </p>
+			<p>This is the WAI-ARIA Authoring Practices 1.1 <a href="https://www.w3.org/2018/Process-20180201/#WGNote">Working Group Note</a> by the <a href="https://www.w3.org/WAI/ARIA/">Accessible Rich Internet Applications Working Group</a>. It supports the <a href="https://www.w3.org/TR/wai-aria-1.1/">Accessible Rich Internet Applications 1.1 W3C Recommendation</a> [[wai-aria-1.1]], providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification.</p>
+			<p>WAI-ARIA Authoring Practices 1.1 was previously published as a Working Group Note in December 2017, to accompany the WAI-ARIA 1.1 Recommendation, and was republished in July 2018 and February 2019 with additional design pattern and examples, quality improvements, and improveed support for WAI-ARIA 1.1. Details of changes are described in the <a href="https://www.w3.org/TR/wai-aria-practices-1.1/#change_log">change log</a>. Separately, <a href="https://www.w3.org/TR/wai-aria-practices-1.2/">WAI-ARIA Authoring Practices 1.2</a> includes the improvements in this document plus additional features specific to <a href="https://www.w3.org/TR/wai-aria-1.2/">WAI-ARIA 1.2</a>.</p>
+    <p> To comment, <a href="https://github.com/w3c/aria-practices/issues/">file an issue in the W3C ARIA Practices GitHub repository</a>, or if that is not possible, send email to <a href="mailto:public-aria@w3.org?subject=Comment%20on%20WAI-ARIA%20Practices%201.1">public-aria@w3.org</a> (<a href="http://lists.w3.org/Archives/Public/public-aria/">comment archive</a>). </p>
   </section>
 
   <section id="intro">
