remove dt from term

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -5048,7 +5048,7 @@
         <tr><th>subscript</th><td>sub</td></tr>
         <tr><th>superscript</th><td>sup</td></tr>
         <tr><th>table</th><td>table</td></tr>
-        <tr><th>term</th><td>dfn, dt</td></tr>    
+        <tr><th>term</th><td>dfn</td></tr>    
         <tr><th>time</th><td>time</td></tr>
         <tr><th>toolbar</th><td>No equivalent element</td></tr>
         <tr><th>tooltip</th><td>No equivalent element</td></tr>
