Add 9 ARIA 1.2 roles to structural roles section (#1113)
To resolve #1106, add the following new 9 ARIA 1.2 roles to the structural roles section:
* associationlist 
* associationlistitemkey 
* associationlistitemvalue 
* code 
* emphasis 
* strong 
* superscript 
* subscript 
* time

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -5013,15 +5013,20 @@
         </tr>
       </thead>
       <tbody>
-        <tr><th>article</th><td>article</td></tr>
         <tr><th>application</th><td>No equivalent element</td></tr>
+        <tr><th>article</th><td>article</td></tr>
+        <tr><th>associationlist</th><td>dl</td></tr>
+        <tr><th>associationlistitemkey</th><td>dt</td></tr>
+        <tr><th>associationlistitemvalue</th><td>dd</td></tr>
         <tr><th>blockquote</th><td>blockquote</td></tr>
         <tr><th>caption</th><td>caption</td></tr>
         <tr><th>cell</th><td>td</td></tr>
+        <tr><th>code</th><td>code</td></tr>
         <tr><th>columnheader</th><td>th</td></tr>
         <tr><th>definition</th><td>dd</td></tr>
         <tr><th>directory</th><td>No equivalent element</td></tr>
         <tr><th>document</th><td>No equivalent element</td></tr>
+        <tr><th>emphasis</th><td>em</td></tr>
         <tr><th>feed</th><td>No equivalent element</td></tr>
         <tr><th>figure</th><td>figure</td></tr>
         <tr><th>group</th><td>No equivalent element</td></tr>
@@ -5038,8 +5043,12 @@
         <tr><th>rowgroup</th><td>tbody, thead, tfoot</td></tr>
         <tr><th>rowheader</th><td>th</td></tr>
         <tr><th>separator (when not focusable)</th><td>hr</td></tr>
+        <tr><th>strong</th><td>strong</td></tr>
+        <tr><th>subscript</th><td>sub</td></tr>
+        <tr><th>superscript</th><td>sup</td></tr>
         <tr><th>table</th><td>table</td></tr>
-        <tr><th>term</th><td>dfn, dt</td></tr>      
+        <tr><th>term</th><td>dfn</td></tr>    
+        <tr><th>time</th><td>time</td></tr>
         <tr><th>toolbar</th><td>No equivalent element</td></tr>
         <tr><th>tooltip</th><td>No equivalent element</td></tr>
       </tbody>
