--- a/examples/carousel/carousel-2-tablist.html
+++ b/examples/carousel/carousel-2-tablist.html
@@ -343,7 +343,7 @@
         <h3>Controlling Automatic Slide Rotation</h3>
         <p>
           Users can stop and start slide rotation, which is an essential aspect of accessibility of the carousel for a variety of people with disabilities.
-          People with low vision or a cognitive disability that effects visual processing or reading benefit from being able to control slide rotation so they have sufficient time to explore slide content.
+          People with low vision or a cognitive disability that affects visual processing or reading benefit from being able to control slide rotation so they have sufficient time to explore slide content.
           Similarly, since screen reader users cannot perceive automatic rotation, it can make reading the page confusing and disorienting.
           For example, when slides are automatically rotating, a screen reader user may read an element on slide one, execute a screen reader command to read the next element, and, instead of hearing the next element on slide one, hear an element from slide 2 without any knowledge that the element just announced is from an entirely new context.
         </p>
@@ -375,7 +375,7 @@
         </p>
         <ul>
           <li>
-            When the tabs conrolling the rendering of slides are on top of the carousel images, the tabs have forground and background colors that meet WCAG 2.1 color contrast requirements.
+            When the tabs controlling the rendering of slides are on top of the carousel images, the tabs have foreground and background colors that meet WCAG 2.1 color contrast requirements.
             In addition, the focus styling uses SVG images that make the focus indicator highly visible when a control receives keyboard focus.
           </li>
           <li>The transparency of the caption area is decreased so the caption text meets the WCAG 2.1 color contrast requirements.</li>
@@ -390,7 +390,7 @@
           This makes it easier for screen reader users to scan through the carousel slides.
           When screen reader users activate a new tab, the new slide content is announced, giving users immediate feedback that helps them determine whether or not to interact with the content.
           Very importantly, if automatic rotation is turned on, the live region is disabled.
-          If it were not, the page would be come unusable as announcements of the continuously changing content constantly interrupt anything else the user is reading.
+          If it were not, the page would become unusable as announcements of the continuously changing content constantly interrupt anything else the user is reading.
         </p>
       </section>
 
