--- a/examples/menubar/menubar-2/menubar-2.html
+++ b/examples/menubar/menubar-2/menubar-2.html
@@ -64,8 +64,12 @@
         <li role="none">
           <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">Style/Color</a>
           <ul role="menu" aria-label="Style/Color">
-            <li role="menuitemcheckbox" rel="font-bold" aria-checked="false">Bold</li>
-            <li role="menuitemcheckbox" rel="font-italic" aria-checked="false">Italic</li>
+            <li>
+              <ul role="group" rel="font-style" aria-label="Font Style">
+                <li role="menuitemcheckbox" rel="font-bold" aria-checked="false">Bold</li>
+                <li role="menuitemcheckbox" rel="font-italic" aria-checked="false">Italic</li>
+              </ul>
+            </li>
             <li role="separator"></li>
             <li>
               <ul role="group" rel="font-color" aria-label="Text Color">
