fixed html validation bugs

--- a/examples/combobox/aria1.1pattern/combo-11-datepicker.html
+++ b/examples/combobox/aria1.1pattern/combo-11-datepicker.html
@@ -162,7 +162,7 @@
                 <td class="dateCell"><button class="dateButton" tabindex="-1">11</button></td>
                 <td class="dateCell"><button class="dateButton" tabindex="-1">12</button></td>
                 <td class="dateCell"><button class="dateButton" tabindex="-1">13</button></td>
-                <td class="dateCell"><button class="dateButton" tabindex="0" aria-selected="true">14</button></td>
+                <td class="dateCell"><button class="dateButton">14</button></td>
                 <td class="dateCell"><button class="dateButton" tabindex="-1">15</button></td>
               </tr>
               <tr>
@@ -388,11 +388,9 @@
             <th><kbd>Space</kbd>,<br><kbd>Enter</kbd></th>
             <td>
               <ul>
-              <ul>
                 <li>Select the date, close the dialog, and move focus to the <q>Choose Date</q> button.</li>
                 <li>Update the value of the <q>Date</q> input with the selected date.</li>
                 <li>Update the accessible name of the <q>Choose Date</q> button to include the selected date.</li>
-              </ul>
               </ul>
           </td>
           </tr>
@@ -549,8 +547,8 @@
             </td>
           </tr>
           <tr data-test-id="textbox-aria-live">
-            <th></th>
-            <td scope="row"><code>aria-live=<q>polite</q></td>
+            <td></td>
+            <th scope="row"><code>aria-live=<q>polite</q></code></th>
             <td><code>div</code></td>
             <td>
               <ul>
@@ -597,7 +595,6 @@
                 </ul>
               </td>
             </tr>
-            </tr>
           </tbody>
         </table>
       </section>
@@ -635,8 +632,8 @@
                 <td>Refers to the heading containing the currently displayed month and year, which defines the accessible name for the dialog.</td>
               </tr>
               <tr data-test-id="dialog-aria-live">
-                <th></th>
-                <td scope="row"><code>aria-live=<q>polite</q></td>
+                <td></td>
+                <th scope="row"><code>aria-live=<q>polite</q></code></th>
                 <td><code>div</code></td>
                 <td>
                   <ul>
