Add Generic Role

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -5029,6 +5029,7 @@
         <tr><th>emphasis</th><td>em</td></tr>
         <tr><th>feed</th><td>No equivalent element</td></tr>
         <tr><th>figure</th><td>figure</td></tr>
+        <tr><th>generic</th><td>div, span</td></tr>
         <tr><th>group</th><td>No equivalent element</td></tr>
         <tr><th>heading with aria-level="N" where N is 1, 2, 3, 4, 5, or 6</th><td>h1, h2, h3, h4, h5, h6</td></tr>
         <tr><th>img</th><td>img</td></tr>
